[package]
name = "mqtt"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3.1.1 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
bitflags = "1.2"
# error-chain = "0.12"
rand = "0.7"
byteorder = "1.3"
slab = "0.4"
bytes = "0.5"
string = { git = "https://github.com/carllerche/string" }
# string = "0.2"
tokio = "0.2"
tokio-util = {version = "0.2", features = ["codec"] }
futures = "0.3"
derive_more = "0.99"

[dev-dependencies]
env_logger = "0.7"
clap = "2"

[lib]
name = "mqtt"

# [[example]]
# name = "echo_server"
# path = "examples/echo_server.rs"
# test = false

# [[example]]
# name = "echo_client"
# path = "examples/echo_client.rs"
# test = false